--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-babel": "5.0.0-beta.7",
-    "@vue/cli-service": "5.0.0-beta.7",
+    "@vue/cli-service": "^4.5.15",
     "@vuetify/vite-plugin": "^1.0.0-alpha.3",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
